# todoListManagerGUI

./: .gitignore  CMakeLists.txt  README.md  glad.c  main  main.cpp  tasks.txt  todoListManager.cpp  todoListManager.h
glad/: glad.h
